--- a/demo.css
+++ b/demo.css
@@ -3,8 +3,7 @@
 body { font-family: Open Sans, Helvetica, Arial, sans-serif; }
 h1 { font-weight: normal; padding: 0; margin: 0; display: block; }
 
-input, textarea { border: 0; padding: 0; margin: 0; color: black; box-shadow: none; opacity: 1; outline: none; border-radius: 0; }
-input::-ms-clear { visibility: hidden; display: none; } 
+input { color: black;  opacity: 1; }
 input::placeholder { color: #bbb; opacity: 1; }
 button { background-color: #6699ff; border-radius: 4px; height: 38px; line-height: 38px; color: white; border: 0; padding: 0 16px; margin: 0; cursor: pointer; font-size: 16px; outline: none; box-shadow: none; }
 button:hover, button:focus { background-color: #4d88ff; }
